--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ section
     height: 1000px;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 30px;
 }
 
 #one
@@ -94,6 +95,7 @@ section
 {
     text-decoration: none;
     color: white;
+    letter-spacing: 1px;
 }
 
 #two h2
