--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ section
     font-family: sans-serif;
 
     width: 70%;
-    height: 900px;
+    height: 950px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 30px;
@@ -48,7 +48,7 @@ section
     font-size: xx-large;
     font-weight: bolder;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 #one h4
@@ -58,7 +58,7 @@ section
     font-size: large;
     font-weight: bold;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 #one h3
@@ -74,14 +74,14 @@ section
     /* text-align: center; */
     
     padding-left: 50px;
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 
 #one ul
 {
     color: white;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 #one ul i
@@ -109,21 +109,25 @@ section
     margin-right: auto;
     border-bottom: solid black 3px;
     padding-bottom: 10px;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 
 }
 #two p
 {
+    
     font-size: large;
     font-family: sans-serif;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
-    margin-bottom: 80px;
+    margin-top: 30px;
+    margin-bottom: 60px;
     line-height: 25px;
     letter-spacing: 1px;
+    text-justify: distribute;
+    text-align: justify;
+    text-justify:inter-word;
 
 
 
@@ -136,8 +140,8 @@ section
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 40px;
-    margin-bottom: 80px;
+    margin-top: 30px;
+    margin-bottom: 60px;
     line-height: 25px;
     letter-spacing: 1px;
     list-style-type:square;
@@ -153,7 +157,7 @@ section
     margin-left: 85px;
   
     margin-top: 10px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     line-height: 25px;
     letter-spacing: 1px;
     list-style-type:square;
